Bug fixes to DAO, added servlets, and connection

--- a/src/main/webapp/employee.html
+++ b/src/main/webapp/employee.html
@@ -43,6 +43,11 @@
         <Label for="workjustification">Work Justification</Label>
         <input type ="text" id="workjustification" name="workjustification">
         <br/>
+        <button type="button" id="dataSubmit">Submit Request</button>
+
+        <section id="userRequests">
+            <button type="button" id="getRequests" onclick="getRequests()">Get submitted getRequests</button>
+        </section>
 
     </form>
     
