--- a/src/main/webapp/manager.html
+++ b/src/main/webapp/manager.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     
+        Current Employee Requests:
+        <button type="button" id="pullRequests">Get submitted Requests</button>
+    <section>
+        //getAll users
+    </section>
+    <section>
+        <input type="text" id="sendUser" placeholder="Enter Employees Name to get Request">
+        <button type="button" id="recordsPull" href="request.html">Forms</button>
+
+    </section>
+    
 </body>
 </html>
