--- a/src/main/webapp/employee.html
+++ b/src/main/webapp/employee.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Employee Portal</title>
 </head>
 <body>
+    <div id="employeeBox">
+        <div class="content">
     <form>
-        <p>Please enter your form information</p>
+        <h1>Please enter your form information</h1>
 
         <Label for="first_name">First Name</Label>
         <input type ="text" id="first_name" name="first_name"> 
@@ -50,6 +53,7 @@
         </section>
 
     </form>
-    
+    </div>
+    <script src="./js/employee.js"></script>
 </body>
 </html>
