--- a/src/main/webapp/manager.html
+++ b/src/main/webapp/manager.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Manager Portal</title>
 </head>
 <body>
-    
+    <div id="managerBox">
+        <div class="content">
         Current Employee Requests:
         <button type="button" id="pullRequests">Get submitted Requests</button>
     <section>
-        //getAll users
+        <!-- get all Users -->
     </section>
     <section>
-        <input type="text" id="sendUser" placeholder="Enter Employees Name to get Request">
-        <button type="button" id="recordsPull" href="request.html">Forms</button>
+        <input type="text" id="sendUser" placeholder="Employees Name">
+        <button type="button" id="recordsPull" href="request.html">Get Forms</button>
 
     </section>
-    
+    </div>
+    <script src="./js/manager.js"></script>
 </body>
 </html>
