--- a/src/main/webapp/request.html
+++ b/src/main/webapp/request.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Employee Form Record</title>
 </head>
 <body>
-    <div class="container">
+    <div id="requestBox" class="container">
+        <div class="content">
         <h1 class="header"><strong>Employee Form request:</strong></h1>
         <div>
             <table>
@@ -17,8 +19,8 @@
                     <th>Status</th>
                 </tr>
                 <tr>
-                    <td>Course 1</td>
-                    <td>Room 1</td>
+                    <td>Test 1</td>
+                    <td>Test 2</td>
                     <td>Pending</td>
                 </tr>
             </table>
@@ -29,13 +31,14 @@
                     <th>Cost</th>
                 </tr>
                 <tr>
-                    <td>01/01/2020</td>
-                    <td>12:00 PM</td>
-                    <td>$100</td>
+                    <td>01/01/202</td>
+                    <td>12:00 AM</td>
+                    <td>$1</td>
                 </tr>
             </table>
         </div>
         <a class="button" id="returnBtn" href="manager.html">Manager Menu</a>
     </div>
+    <script src="./js/request.js"></script>
 </body>
 </html>
